# vostok-pdb-parser

./: .gitignore  CLAUDE.md  Cargo.toml  IMPROVEMENTS.md  PLAN.md  WORK.md
src/: declarations.rs  dump_pdb.rs  error.rs  formatter.rs  gen_headers.rs  gen_sources.rs  lib.rs  main.rs  orphan_classify.rs  pdb_parser.rs  report_stats.rs  rich_callees.rs  rich_context.rs  rich_diff.rs  rich_objdiff.rs  rich_query.rs  rich_render.rs  rich_structure_diff.rs  type_builder.rs  utils_fs.rs
src/helpers/: files.rs  function_cache.rs  mod.rs
