[package]
name = "vostok-pdb-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive", "env"] }

pdb = { package = "pdb2", git = "https://github.com/afranchuk/pdb", rev = "384c165" }
pdb-addr2line = { git = "https://github.com/srp-survarium/pdb-addr2line", rev = "0a314d74db568fdd5a353e5df054655cc6d7cc17" }
pdb-addr2line-orig = { package = "pdb-addr2line", version = "0.11.2" }

anyhow = "1.0"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
digest = "0.10"
bitflags = "2.9.2"
globset = "0.4.18"
chrono = "0.4.42"
uuid = { version = "1.18.1", features = ["v4"] }

# Rich-context listing: PE parsing (.text bytes / image base) + x86 disassembly.
object = { version = "0.39.0", features = ["pe"] }
iced-x86 = "1.21.0"
# Rich-context function index (JSONL) consumed by the query tool.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
objdiff-core = { version = "2.5.0", default-features = false, features = ["x86"] }

[lints.clippy]
collapsible_if = "allow"
manual_is_multiple_of = "allow"
new_without_default = "allow"
useless_format = "allow"
